--- a/src/style/card.css
+++ b/src/style/card.css
@@ -1,44 +1,46 @@
-.card{
+.contenedor{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 99vw;
+    height: 99vh;
     flex-direction: column;
-    background-color: white;
-    box-shadow: 0px 0px 5px grey;
-    transition: all 0.5s ease;
-}
-.tamaño{
-    height: 30px;
-    margin: 0;
-    margin-top: 40px;
-
-    font-weight: bold;
 }
 .flex{
     display: flex;
+    gap: 2px;
 }
-.container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 1%;
-    margin-bottom: 40px;
-}
-*{
+.contenedor > div:nth-child(1){
+    width: 282px;
+    height: 282px;
     text-align: center;
+    background-color: rgb(74, 88, 212);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
 }
-.alinear{
-    margin: auto;
+.flex > div{
+    width: 140px;
+    height: 90px;
+    text-align: center;
+    background-color: rgb(74, 88, 212);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
 }
-.Grass{
-    background-color: rgb(116, 170, 34);
+.contenedor > div:nth-child(4){
+    width: 282px;
+    height: 120px;
+    text-align: center;
+    background-color: rgb(74, 88, 212);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
 }
-.Fire{
-    background-color: rgb(168, 21, 21);
+.contenedor > div:nth-child(1) p{
+    font-size: 40px;
+    font-weight: bold;
 }
-.Water{
-    background-color: aquamarine;
-}
-
-.card:hover{
-    transform: scale(102%);
-}
-
